--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body {
     background: none;
 }
 .jumbotron {
+    opacity: 0.95;
     padding-top: 6%;
 }
 .jumbotron p {
@@ -21,4 +22,7 @@ body {
 }
 .navbar-brand {
     font-family: 'Open Sans', sans-serif;
+}
+.well {
+    opacity: 0.95;
 }
